<resources>
    <string name="app_name">FitnessApp</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="fitness_app">Fitness App</string>
    <string name="login">Login</string>
    <string name="if_you_don_t_have_an_account_click_here">If you don\'t have an account click here.</string>
    <string name="title_activity_exercises_list">ExercisesList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_exercises_view_all">ExercisesViewAll</string>
    <string name="if_you_don_t_want_to_use_the_app_offline_click_here" />
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>