<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".Activities.Login">

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:clickable="true"
        android:fontFamily="@font/oswald"
        android:text="Forgot password?"
        android:textColor="#00403A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGoToOffline"
        android:focusable="true" />

    <TextView
        android:id="@+id/textViewGoToOffline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:clickable="true"
        android:fontFamily="@font/oswald"
        android:text="If you want to use the app offline click here"
        android:textColor="#00403A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGoToRegister" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        android:text=""
        android:hint="@string/password"
        android:textAlignment="viewStart"
        android:textColor="#00403A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressLogin"
        android:autofillHints="" />


    <EditText
        android:id="@+id/emailAddressLogin"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="18dp"
        android:background="@color/light_gray"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:text=""
        android:hint="@string/email_address"
        android:textAlignment="viewStart"
        android:textColor="#00403A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="102dp"
        android:fontFamily="@font/oswald"
        android:text="@string/fitness_app"
        android:textAlignment="center"
        android:textColor="#00403A"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginEnd="174dp"
        android:fontFamily="@font/oswald"
        android:text="@string/login"
        android:textColor="#00403A"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="98dp"
        android:backgroundTint="@color/main_blue_saphire"
        android:fontFamily="@font/oswald"
        android:text="LOGIN"
        android:textSize="20sp"
        android:theme="@style/Button.Green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="182dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="181dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGoToRegister" />

    <TextView
        android:id="@+id/textViewGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:fontFamily="@font/oswald"
        android:text="@string/if_you_don_t_have_an_account_click_here"
        android:textColor="#00403A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />




</androidx.constraintlayout.widget.ConstraintLayout>